--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <aside class="sidepanel">
         <a href="#" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="Facebook"></a>
-        <a href="#" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="Instagram"></a>
+        <a href="https://www.instagram.com/max.stlmh/" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="Instagram"></a>
         <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="GitHub"></a>
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text"><span>Social media</span></div>
