--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <aside class="sidepanel">
-        <a href="#" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="Facebook"></a>
+        <a href="https://www.facebook.com/nightcall8813/" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="Facebook"></a>
         <a href="https://www.instagram.com/max.stlmh/" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="Instagram"></a>
         <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="GitHub"></a>
         <div class="sidepanel__divider"></div>
