--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <img class="works" src="./img/works/pulse.jpg" alt="pulse">
                 </a>
                 <a href="https://makss-fabulous-site-3cfff0.webflow.io" class="portfolio__item">
-                    <img src="./img/works/Works_bread.jpg" alt="test">
+                    <img src="./img/works/Folder-Grey_Front.jpg" alt="test">
                 </a>
                 <a href="#" class="portfolio__item vertical">
                     <img src="./img/works/Works_plans.jpg" alt="test">
